--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-click==8.0.3
-Flask==2.0.2
-importlib-metadata==4.8.2
-itsdangerous==2.0.1
-Jinja2>=3.0
-MarkupSafe==2.0.1
-typing-extensions==4.0.1
-Werkzeug==2.0.2
-zipp==3.6.0
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==2.1.1
+opencv-python==4.10.0.84
+Werkzeug==3.0.4
